tests/invalid/runtime/io_close_std.pts
import Io;

function main() : void {
    Io.stdin.close();
}
